[[bin]]
name = "ip-check"
path = "src/main.rs"

[package]
name = "ip-check"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
exitfailure = "0.5.1"
ipgeolocate = "0.3.5"